--- a/task-1.html
+++ b/task-1.html
@@ -6,39 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 1</title>
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/task-1.css" />
   </head>
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <ul id="categories">
+    <ul class="cat-names" id="categories">
       <li class="item">
         <h2>Animals</h2>
 
-        <ul>
-          <li>Cat</li>
-          <li>Hamster</li>
-          <li>Horse</li>
-          <li>Parrot</li>
+        <ul class="cat-list">
+          <li class="cat-list-item">Cat</li>
+          <li class="cat-list-item">Horse</li>
+          <li class="cat-list-item">Hamster</li>
+          <li class="cat-list-item">Parrot</li>
         </ul>
       </li>
       <li class="item">
         <h2>Products</h2>
 
-        <ul>
-          <li>Bread</li>
-          <li>Prasley</li>
-          <li>Cheese</li>
+        <ul class="cat-list">
+          <li class="cat-list-item">Bread</li>
+          <li class="cat-list-item">Prasley</li>
+          <li class="cat-list-item">Cheese</li>
         </ul>
       </li>
       <li class="item">
         <h2>Technologies</h2>
 
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
+        <ul class="cat-list">
+          <li class="cat-list-item">HTML</li>
+          <li class="cat-list-item">CSS</li>
+          <li class="cat-list-item">JavaScript</li>
+          <li class="cat-list-item">React</li>
+          <li class="cat-list-item">Node.js</li>
         </ul>
       </li>
     </ul>
